# takeashot

./: .gitignore  .wraprc  CLAUDE.md  Cargo.toml  IFLOW.md  Toolbar.qml  check_formats.py  commit.sh  cursor_manager.py  dbus_manager.py  flake.nix  input_monitor.py  main.py  memory_profile.py  pixmap_leak_analysis.py  plan.md  project-overview.md  pyproject.toml  screenshot_backend.py  screenshot_backend_fixed.py  screenshot_kwin.py  screenshot_tool.py  simple_memory_profile.py  snipping_widget.py  test_qml.py  toolbar.py  toolbar_widget.py  window_lister.py
.agent/: rules
.agent/prompt-history/: 000-init-environment.md  001-prototype-screenshot.md  002-first-implementation.md  003-fix-hidpi.md  004-fullscreen.md  005-multiple-screens.md  006-cursor.md  007-fix-crash.md  008-remove-fhs-nix.md  009-refactor.md  010-cross-screen.md  011-fix-cross-screen.md  012-prototype-list-window.md  013-snapping.md  014-fix-snapping.md  015-pending-selection-esc.md  016-add-design-docs.md  017-pending-selection-again.md  018-order-window.md  019-fix-mouse.md  020-expand-selection.md  021-double-click.md  022-add-toolbar.md  022-editor-toolbar.md  023-fix-toolbar.md  024-refactor-snipping.md  025-update-design-docs.md  026-fix-toolbar-ui.md  027-qml.md  028-paint.md  029-fix-repeat-tool.md  030-use-tabler-icons.md  031-dbus-activate.md  032-fix-toolbar.md  033-fix-repeat-tool.md  034-hotkey.md  035-qt6.md  036-e2e.md  037-fix-snapping.md  038-fix-mouse.md  (+11 more)
.agent/rules/: base-guide.md  prevent-read-history.md  read-design-doc.md
.claude/: settings.local.json
annotations/: __init__.py  base_tool.py  freehand_tool.py  items.py  line_tool.py  manager.py  rectangle_tool.py
docs/: design.md
prototypes/: check_pyqt_info.py  list_windows.py  screenshot_kwin.py  test_hotkey.py  verify_imports.py
resources/: takeashot.desktop
src/: app.rs  blur.rs  capture.rs  clipboard.rs  compose.rs  geom.rs  hotkey.rs  main.rs  selection.rs  single_instance.rs  snap.rs
src/annotation/: mod.rs  (+1 more)
tests/: conftest.py  test_cursor_manager.py  test_e2e.py  test_integration_window_lister.py  test_selection_state.py  test_window_lister.py
(+17 files in other folders)
