[package]
name = "takeashot"
version = "0.1.0"
edition = "2024"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
evdev = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
