[package]
name = "takeashot"
version = "0.1.0"
edition = "2024"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
evdev = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memfd = "0.6"
libc = "0.2"
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop", "calloop-wayland-source", "xkbcommon"] }
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }
raw-window-handle = "0.6"
pollster = "0.4"
wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-sys = { version = "0.31", features = ["client"] }
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
glam = "0.32.1"
lyon = "1.0.19"
lyon_path = "1.0.19"
lyon_tessellation = "1.0.20"
egui = "0.34.1"
egui-wgpu = "0.34.1"
wl-clipboard-rs = "0.9"
